yldme-deploy.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: yldme-deploy 
  labels:
    type: yldme-label 
spec:
  replicas: 1
  strategy:
    type: Recreate    
  selector:
    matchLabels:
      run: yldme-app
  template:
    metadata:
      labels:
        run: yldme-app
        type: yldme-app
        tier: frontend
        version: v13
    spec:
      containers:
      - name: frontend
        image: gcr.io/yldus-1/yldme-app:v13
        ports:
          - containerPort: 5000
